compiler generated annotations and processor for codecs